# simData_imgSaver

./: .gitignore  CMakeLists.txt  README.md  package.xml
annotation/: bbx_end_effector.txt  end_effector_pose.txt
launch/: empty_world.launch  load_3d_warehouse.launch  load_arm.launch  load_hammer.launch  load_obejct.launch  load_table.launch
models/box/: description.sdf
models/cylinder/: description.sdf
models/kinect_ros/: model.config  model.sdf  model.sdf~  model_bak.sdf
models/sphere/: description.sdf
models/table/: model-1_2.sdf  model-1_2.sdf~
src/: visuomotor_dataset_collector.py  visuomotor_grasp_3D_Box.py  visuomotor_grasp_3D_Box_affordance.py
utils/: boundingBoxGenerator.m  boundingBoxGenerator_knife06_whiteBG.m  move_model_files.m  move_model_files.m~  move_model_files_affordance.m
