<package>
  <name>robotic_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>Launch file for loading 3D model in gazbeo</p>
  </description>
  <author>me</author>
  <maintainer email="gtsimonxu@gatech.edu" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>edy_dualarm_description</build_depend>
  <build_depend>warehouse</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>edy_dualarm_description</run_depend>
  <run_depend>warehouse</run_depend>

  <export>
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}/models"
    />
  </export>
</package>